--- a/drills/version-1/css/style.css
+++ b/drills/version-1/css/style.css
@@ -27,6 +27,7 @@ header h1 {
 }
 .play-again {
   padding: 10px 20px;
+  margin-bottom: 20px;
   width: 100%;
   font-size: 26px;
   border: 1px solid #fff;
@@ -40,6 +41,7 @@ header h1 {
           border-radius: 5px;
   display: none;
 }
+
 .play-again:hover {
   background-color: #6bb565;
   background: -webkit-linear-gradient(#6bb565, #a1d3b0);
