--- a/drills/version-3/css/style.css
+++ b/drills/version-3/css/style.css
@@ -1,20 +1,109 @@
-#canvas-button {
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+.wrapper {
+    height: 800px;
+    width: 1024px;
+    margin: 0 auto;
+    background: linear-gradient(red, yellow, green);
+    border-radius: 30px;
+}
+
+h1 {
+    padding-top: 30px;
+    color: white;
+   text-shadow:
+       3px 3px 0 #000,
+     -1px -1px 0 #000,
+      1px -1px 0 #000,
+      -1px 1px 0 #000,
+       1px 1px 0 #000;
+    font-size: 3rem;
+}
+
+h1, .canvas-links {
+    text-align: center;
+    margin: 15px auto;
+}
+
+.canvas-button-small, .canvas-button-medium, .canvas-button-large {
     height: 30px;
     width: 100px;
+    font-size: 18px;
 }
 
-#canvas-board {
+.canvas-board {
     display: flex;
     flex-wrap:wrap;
-    justify-content: center;
-    min-height: 60px;
-    min-width: 60px;
     background-color: lightgray;
+    margin: auto;
 }
 
-.square {
-    height: 20px;
-    width: 20px;
+.small-canvas {
+    width: 400px;
+    height: 400px;
+}
+
+.medium-canvas {
+    width: 600px;
+    height: 425px;
+}
+
+.large-canvas {
+    width: 800px;
+    height: 600px;
+}
+
+.pixel {
+    height: 25px;
+    width: 25px;
     background-color: white;
     border: 1px solid lightgray;
+}
+
+.hidden {
+    display: none;
+}
+
+.paint-brush {
+    display:inline-block;
+    height: 40px;
+    width: 40px;
+    border: 2px solid black;
+    border-radius: 100%;
+    background-color: red;
+}
+
+.paint-pallet {
+    display: flex;
+    justify-content: center;
+    height: 50px;
+    margin-top: 7px;
+}
+
+.color-one, .color-two, .color-three, .color-four, .color-five {
+    margin: 0 5px;
+}
+
+.color-one {
+    background-color: #FFF;
+}
+
+.color-two {
+    background-color: #4682B4;
+}
+
+.color-three {
+    background-color: #FF5733;
+}
+
+.color-four {
+    background-color: #DAF7A6;
+}
+
+.color-five {
+    background-color: #000;
 }
