--- a/drills/version-3/css/style.css
+++ b/drills/version-3/css/style.css
@@ -8,12 +8,14 @@
     height: 800px;
     width: 1024px;
     margin: 0 auto;
-    background: linear-gradient(red, yellow, green);
+    background: linear-gradient(#338686, #53C4C4, #338686);
     border-radius: 30px;
+    border: 10px solid black;
+    box-shadow:         inset 0 0 10px #000000;
 }
 
 h1 {
-    padding-top: 30px;
+    padding-top: 5px;
     color: white;
    text-shadow:
        3px 3px 0 #000,
@@ -26,7 +28,7 @@ h1 {
 
 h1, .canvas-links {
     text-align: center;
-    margin: 15px auto;
+    margin: 10px auto;
 }
 
 .canvas-button-small, .canvas-button-medium, .canvas-button-large {
